Refactor domain model